fixing movie cards showing too below or not showing completely and cleaning up console log statements

--- a/src/app/movie-list/movie/movie.component.scss
+++ b/src/app/movie-list/movie/movie.component.scss
@@ -10,3 +10,7 @@ p {
 .container {
   margin: 1rem;
 }
+
+.card {
+  height:21rem;
+}
